--- a/.github/workflows/CIdocker-image.yml
+++ b/.github/workflows/CIdocker-image.yml
@@ -14,5 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+#     - name: Build the Docker image
+#       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: build and push
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: suraj665/sings665
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
