--- a/.github/workflows/CIdocker-image.yml
+++ b/.github/workflows/CIdocker-image.yml
@@ -20,6 +20,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: suraj665/sings665
+        tags: v1, latest
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
