--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,6 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '28 5 * * *'
   push:
     branches: [ main ]
     # Publish semver tags as releases.
@@ -19,7 +17,8 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+#   IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: nginxapp
 
 
 jobs:
