--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,8 +17,8 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-#   IMAGE_NAME: ${{ github.repository }}
-  IMAGE_NAME: nginxapp
+  IMAGE_NAME: ${{ github.repository }}
+#   IMAGE_NAME: nginxapp
 
 
 jobs:
